WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
211965
[JSC] getFunctionRealm should not use recursion
https://bugs.webkit.org/show_bug.cgi?id=211965
Summary
[JSC] getFunctionRealm should not use recursion
Yusuke Suzuki
Reported
2020-05-15 12:50:32 PDT
[JSC] getFunctionRealm should not use recursion
Attachments
Patch
(4.73 KB, patch)
2020-05-15 12:52 PDT
,
Yusuke Suzuki
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Yusuke Suzuki
Comment 1
2020-05-15 12:52:11 PDT
Created
attachment 399503
[details]
Patch
Yusuke Suzuki
Comment 2
2020-05-15 12:52:13 PDT
<
rdar://problem/63268287
>
Mark Lam
Comment 3
2020-05-15 13:30:29 PDT
Comment on
attachment 399503
[details]
Patch r=me too
EWS
Comment 4
2020-05-15 18:23:45 PDT
Committed
r261773
: <
https://trac.webkit.org/changeset/261773
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 399503
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug