[JSC] getFunctionRealm should not use recursion https://bugs.webkit.org/show_bug.cgi?id=211965 <rdar://problem/63268287>

Reviewed by Saam Barati.

JSTests:

* stress/get-function-realm-not-doing-recursion.js: Added.
(canThrow):
(const.emptyFunction):

Source/JavaScriptCore:

This patch avoids using recursion in getFunctionRealm to avoid stack-overflow.

* runtime/InternalFunction.cpp:
(JSC::getFunctionRealm):


Canonical link: https://commits.webkit.org/224865@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@261773 268f45cc-cd09-0410-ab3c-d52691b4dbfc